--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,3 +10,7 @@ font-family: 'Roboto-Slab', serif;
 h1,h2,h3,h4,h5,h6{
 font-family: 'Poppins', sans-serif;
 }
+
+nav{
+font-family:  sans-serif;
+}
